fix product link

--- a/pages/index.html
+++ b/pages/index.html
@@ -76,7 +76,7 @@
           <h2 class="home-block-title">經典系列鏡框</h2>
           <ul class="classic-card">
             <li>
-              <a href="#">
+              <a href="product-optical.html">
                 <img
                   src="../assets/images/home-section3-1.png"
                   alt="classic-optical"
@@ -85,7 +85,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="product-sunglasses.html">
                 <img
                   src="../assets/images/home-section3-2.png"
                   alt="classic-sunglasses"
