--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <h2 class="home-block-title">經典系列鏡框</h2>
           <ul class="classic-card">
             <li>
-              <a href="#">
+              <a href="product-optical.html">
                 <img
                   src="/2023-web-layout-week3-4/assets/home-section3-1-bb26ab65.png"
                   alt="classic-optical"
@@ -101,7 +101,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="product-sunglasses.html">
                 <img
                   src="/2023-web-layout-week3-4/assets/home-section3-2-38fdd6aa.png"
                   alt="classic-sunglasses"
